Changes for 1.8.4rc3

 - [ZBX-2672] added internal checks zabbix[*] to help items in data.sql (Sasha)
 - [ZBX-3255] fixed string escaping under IBM DB2 (asaveljevs,Sasha)
 - [ZBX-3201] fixed evaluation of calculated items with multiline expressions (asaveljevs)
 - [ZBX-3210] fixed incorrect height scaling in graphs (KB,asaveljevs)
 - [ZBX-3231] improved item key validation in the GUI and notification macro parser on the server (KB,asaveljevs)
 - [ZBX-3061] fixed screen import problem with "Status of triggers" screen type (Aly)
 - [ZBX-3249] added define for frontend graphing on partitioned DB data store (Aly)
 - [ZBX-3216] fixed setup not catching existing configuration file on step 6 (Vedmak)
 - [ZBX-3240] updated Russian translation; thanks to dotneft and zalex_ua (Richlv)
 - [ZBX-3229] improved output of configure script (Richlv,asaveljevs)
 - [ZBX-3222] fixed Zabbix returns to incorrect page from acknowledge form (Vedmak)
 - [ZBX-2577] fixed template trigger update affects downstream triggers (Vedmak)
 - [ZBX-3221] fixed host deletion through API (Aly)
 - [ZBX-3220] fixed error when delete host on postgresql db (Vedmak)
 - [ZBX-2293] fixed server terminating when sending "database down" alerts using scripts (asaveljevs,Sasha)
 - [ZBX-3184] fixed 1000 vs. 1024 multipliers for bits, bytes, and other units in notification macros (asaveljevs)
 - [ZBX-3184] fixed negative values with unit suffixes in notification macros (asaveljevs)
 - [ZBX-3211] updated Ukrainian translation; renamed locale to uk_ua; thanks to zalex_ua (Richlv)
 - [ZBX-3085] fixed possible stop to send data from proxy after shutdown of MySQL server; thanks to Takanori Suzuki (Sasha)
 - [ZBX-3169] updated French translation; thanks to Alixen (Alexei)
 - [ZBX-3218] server and proxy are no longer built with libcurl by default (asaveljevs)
 - [ZBX-3145] fixed user macros resolving (Vedmak)
 - [ZBX-3215] fixed filtering by group in trigger selection popup (Vedmak)