@@ -47,7 +47,7 @@ var Prototype = {
   },
 
   ScriptFragment: '<script[^>]*>(?:\\s*<!--)*([\\S\\s]*?)(?:-->\\s*)*<\/script>',
-// original:  
+// original:
 //  ScriptFragment: '<script[^>]*>([\\S\\s]*?)<\/script>',
   JSONFilter: /^\/\*-secure-([\s\S]*)\*\/\s*$/,
 
@@ -1491,7 +1491,6 @@ Ajax.Request = Class.create(Ajax.Base, {
 
   respondToReadyState: function(readyState) {
     var state = Ajax.Request.Events[readyState], response = new Ajax.Response(this);
-
     if (state == 'Complete') {
       try {
         this._complete = true;
