@@ -4,6 +4,7 @@ require_once('include/locales/en_gb.inc.php');
 require_once('include/js.inc.php');
 $translations = $TRANSLATION;
 
+
 if(isset($_GET['lang']) && ($_GET['lang'] != 'en_gb') && preg_match('/^[a-z]{2}_[a-z]{2}$/', $_GET['lang'])){
 	require_once('include/locales/'.$_GET['lang'].'.inc.php');
 	$translations = array_merge($translations, $TRANSLATION);
@@ -32,7 +33,7 @@ $availableJScripts = array(
 	'class.cdebug.js' => '',
 	'class.cmap.js' => '',
 	'class.cmessages.js' => '',
-	'class.cookie.js' => '', 
+	'class.cookie.js' => '',
 	'class.cscreen.js' => '',
 	'class.csuggest.js' => '',
 	'class.cswitcher.js' => '',
